@@ -10,7 +10,11 @@ pv-color-by-system=Color by system
 pv-mouseover-disabled=Disabled mouse-over pipe visualizer
 pv-mouseover-enabled=Enabled mouse-over pipe visualizer
 
+[mod-setting-description]
+pv-entities-per-tick=Higher numbers will increase UPS impact, particularly when using the overlay.
+
 [mod-setting-name]
+pv-entities-per-tick=Entities per tick
 pv-overlay-opacity=Overlay opacity
 
 [shortcut-name]
