@@ -7,4 +7,11 @@ data:extend({
     minimum_value = 0,
     maximum_value = 1,
   },
+  {
+    type = "int-setting",
+    name = "pv-entities-per-tick",
+    setting_type = "runtime-global",
+    default_value = 30,
+    minimum_value = 1,
+  },
 })
